--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit>=1.32
 streamlit-autorefresh>=0.1.0
-plotly>=5.20
+yfinance>=0.2
 pandas>=2.2
-requests>=2.31
+pandas-ta>=0.3
+plotly>=5.20
+numpy>=1.26
